Fixed: chat msgs were overflowing outside of the container

--- a/css/nurd.less
+++ b/css/nurd.less
@@ -287,8 +287,7 @@ h1 { text-align: center; }
         label { font-weight: bold; }
         .msg { background: transparent; border: 0; font-size: 16px; padding: 4px; width:350px; }
     }
-    .chat-msgs {
-        height: 250px;
+    .chat-msgs { height: 250px; overflow: auto;
         .chat-msg {
             margin:5px 0 0;
             .sender { background:#E1F3F7; border-radius:3px; display:inline-block; margin:0 7px 0 0; padding:4px 5px; }
